--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
     	"php": ">=7.1.0",
-        "topthink/framework": "^6.0"
+        "topthink/framework": "^6.0",
+        "topthink/think-view": "^1.0"        
     },
     "autoload": {
         "psr-4": {
